Fixed lumber UI misalignment

--- a/content/dota_addons/enfos/panorama/styles/custom_game/resource.css
+++ b/content/dota_addons/enfos/panorama/styles/custom_game/resource.css
@@ -18,8 +18,8 @@
     horizontal-align: right;
     vertical-align: bottom;
 
-    margin-bottom: 40px;
-    margin-right: 100px;
+    margin-bottom: 5px;
+    margin-right: 10px;
 }
 
 
